--- a/public/css/style.css
+++ b/public/css/style.css
@@ -305,7 +305,7 @@ section .girl .card .content .sell{
     font-size: 14px;
 }
 .girl>.row{
-   margin-bottom: 50px;
+   margin-bottom: 20px;
 
 }
 .girl .card{
@@ -317,8 +317,15 @@ section .girl .card .content .sell{
 }
 .girl img{
    max-height: 300px;
+   min-height: 300px;
+    width: 100%;
 }
-.girl .card a{
+.girl .col-md-3{
+    margin-bottom: 20px;
+}
+.girl .card .content a,.girl .card .content button{
+    cursor: pointer;
+    border: none;
     display: block;
     font-size: 14px;
     font-weight: 400;
@@ -329,10 +336,12 @@ section .girl .card .content .sell{
     background-color: #333;
     padding: 0;
     margin: 15px;
+    width: 90%;
     -webkit-border-radius: 0;
     text-decoration: none;
 }
 .girl .card h2{
+    margin-top: 10px;
     padding-left: 20px;
     text-transform: uppercase;
     line-height: 1.5; 
@@ -515,4 +524,7 @@ footer  .copy-right div:last-child{
 }
 .review .row:last-child{
     margin-bottom: 50px;
+}
+.motasp img{
+        width: 80%;
 }
